force-app/main/default/objects/Temporal_Encuadramientos__c/Temporal_Encuadramientos__c.object-meta.xml
<CustomObject>
    <label>Temporal Encuadramiento</label>
    <nameField>
        <label>id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temporal Encuadramientos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>