force-app/main/default/objects/Temporal_Encuadramientos__c/fields/CORE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>CORE_FLAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CORE_FLAG</label>
    <type>Checkbox</type>
</CustomField>