force-app/main/default/objects/Temporal_Encuadramientos__c/fields/DIAS_CORE__c.field-meta.xml
<CustomField>
    <fullName>DIAS_CORE__c</fullName>
    <label>DIAS_CORE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>