force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_ALUMNO__c.field-meta.xml
<CustomField>
    <fullName>EN_ALUMNO__c</fullName>
    <label>EN_ALUMNO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>