force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_ANO__c.field-meta.xml
<CustomField>
    <fullName>EN_ANO__c</fullName>
    <label>EN_ANO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>