force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_ASIENTO__c.field-meta.xml
<CustomField>
    <fullName>EN_ASIENTO__c</fullName>
    <label>EN_ASIENTO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>