force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_BANCO__c.field-meta.xml
<CustomField>
    <fullName>EN_BANCO__c</fullName>
    <label>EN_BANCO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>