force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_BOLSA__c.field-meta.xml
<CustomField>
    <fullName>EN_BOLSA__c</fullName>
    <label>EN_BOLSA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>