force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_BONOS__c.field-meta.xml
<CustomField>
    <fullName>EN_BONOS__c</fullName>
    <label>EN_BONOS</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>