force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_DANTES__c.field-meta.xml
<CustomField>
    <fullName>EN_DANTES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EN_DANTES</label>
    <type>Checkbox</type>
</CustomField>