force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_FCHCOB__c.field-meta.xml
<CustomField>
    <fullName>EN_FCHCOB__c</fullName>
    <label>EN_FCHCOB</label>
    <type>Date</type>
</CustomField>