force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_FECENC__c.field-meta.xml
<CustomField>
    <fullName>EN_FECENC__c</fullName>
    <label>EN_FECENC</label>
    <type>Date</type>
</CustomField>