force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_FECHAS_OK__c.field-meta.xml
<CustomField>
    <fullName>EN_FECHAS_OK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EN_FECHAS_OK</label>
    <type>Checkbox</type>
</CustomField>