force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_FECHAS_RES__c.field-meta.xml
<CustomField>
    <fullName>EN_FECHAS_RES__c</fullName>
    <label>EN_FECHAS_RES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>