force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_LUGAR__c.field-meta.xml
<CustomField>
    <fullName>EN_LUGAR__c</fullName>
    <label>EN_LUGAR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>