force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_MEDPAGO__c.field-meta.xml
<CustomField>
    <fullName>EN_MEDPAGO__c</fullName>
    <label>EN_MEDPAGO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>