force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_NIVMONI__c.field-meta.xml
<CustomField>
    <fullName>EN_NIVMONI__c</fullName>
    <label>EN_NIVMONI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>