force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_OCUPAC__c.field-meta.xml
<CustomField>
    <fullName>EN_OCUPAC__c</fullName>
    <label>EN_OCUPAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>