force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_ORIGEN__c.field-meta.xml
<CustomField>
    <fullName>EN_ORIGEN__c</fullName>
    <label>EN_ORIGEN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>