force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_REUPRE__c.field-meta.xml
<CustomField>
    <fullName>EN_REUPRE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EN_REUPRE</label>
    <type>Checkbox</type>
</CustomField>