force-app/main/default/objects/Temporal_Encuadramientos__c/fields/EN_TIPORI__c.field-meta.xml
<CustomField>
    <fullName>EN_TIPORI__c</fullName>
    <label>EN_TIPORI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>